infra/applications/monolith/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: monolith-deployment # name of component
  name: monolith-deployment # name of component
spec:  # specifications of the deployment
  replicas: 1  #how many pods I want
  selector:  # how to select the deployment component
    matchLabels:
      component: monolith-deployment  # name of component
  strategy: # strategy of deployment for some changes
    rollingUpdate:  #the method to avoid downtimes
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:  # pods inside the deployment
    metadata:
      labels:
        component: monolith-deployment
    spec:
      containers:
        - name: monolith-container
          image: hacheev/monolith_systems_monolith:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 200m
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
