infra/applications/monolith/service.yml
apiVersion: v1
kind: Service
metadata:
  name: monolith-service
spec:
  selector:
    component: monolith-deployment
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
