infra/applications/monolith/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: monolith-service
                port:
                  number: 8080
